[tool.poetry]
name = "incolumepy.fastiapi.yt_faztcode_restapi_crud"
version = "0.4.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include="incolumepy", from=""}
]
[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.2"
fastapi = "^0.78.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
